# ai_courses

./: LLM.md  README.md
openai_basics/: pyproject.toml
openai_basics/openai_api/: openai_basic.py
udemy_ai/: notes_ai.md
udemy_ai/agentic_ai_1/: notes_ai.md  pyproject.toml
udemy_ai/agentic_ai_1/jupyter/: Untitled.ipynb
udemy_ai/agentic_ai_1/scripts/: nltk_script.py
udemy_ai/agentic_ai_2/: agentic_ai.md
